# python-api-project-template

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  deploy.yml  first-action.yml
app/: logger.py  model.py  repository.py  routes.py  service.py  utils.py
docs/: spec.md
kubernetes/: deployment.yaml  service.yaml
tests/: test_recipes.py
