[tool.poetry]
name = "python-api-project-template"
version = "0.1.0"
description = "Python API Template"
authors = ["Tiago Vinicius <vinicius.remigio@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.110.1"
requests = "2.31.0"
uvicorn = "0.29.0"
pydantic = "2.7.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "1.8.0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
